--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.testng:testng:7.1.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:7.1.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:7.1.0'
-
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation("org.junit.jupiter:junit-jupiter:5.8.1")
 }
 
 test {
