--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,7 @@
 plugins {
-    id 'java'
     id 'application'
+    id 'java'
 }
-application {
-    mainClassName = 'agh.ics.oop.World'
-}
-java {
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(17))
-    }
-}
-
 
 group 'org.example'
 version '1.0-SNAPSHOT'
@@ -20,11 +11,22 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    testImplementation("org.junit.jupiter:junit-jupiter:5.8.1")
+    implementation 'org.testng:testng:7.1.0'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 }
 
 test {
     useJUnitPlatform()
+}
+
+application {
+    mainClassName = 'agh.ics.oop.World'
+}
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
 }
