--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'application'
     id 'java'
-    id 'org.openjfx.javafxplugin' version '0.0.10'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
 group 'org.example'
@@ -16,7 +16,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 }
@@ -26,7 +26,7 @@ test {
 }
 
 application {
-    mainClassName = 'agh.ics.oop.World'
+    getMainClass().set('agh.ics.oop.World')
 }
 
 java {
@@ -34,3 +34,4 @@ java {
         languageVersion.set(JavaLanguageVersion.of(17))
     }
 }
+
